--- a/src/style.scss
+++ b/src/style.scss
@@ -86,3 +86,8 @@ $themes: (
     @content;
   }
 }
+@mixin xsmall {
+  @media (max-width: 425px) {
+    @content;
+  }
+}
